[gd_scene load_steps=4 format=3 uid="uid://dqy8pfunftkxq"]

[ext_resource type="Script" path="res://general/ui.gd" id="1_m7gho"]
[ext_resource type="Texture2D" uid="uid://gxbu23o8k2gp" path="res://assets/focus_circle.png" id="2_uuhvn"]
[ext_resource type="Texture2D" uid="uid://dmsm1gqkd87lk" path="res://assets/focus_arrow.png" id="3_xmsno"]

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_m7gho")

[node name="focus_circle" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.529412)
scale = Vector2(0.2, 0.2)
texture = ExtResource("2_uuhvn")

[node name="potential_focus_circle" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.121569)
scale = Vector2(0.3, 0.3)
texture = ExtResource("2_uuhvn")

[node name="focus_arrow" type="Sprite2D" parent="."]
position = Vector2(-2.38419e-07, 0)
scale = Vector2(0.03, 0.03)
texture = ExtResource("3_xmsno")
offset = Vector2(-1200, 0)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 12.0
offset_top = 9.0
offset_right = 52.0
offset_bottom = 113.0

[node name="timespeed" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="tardist" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="tarrelvel" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="gravaccel" type="Label" parent="VBoxContainer"]
layout_mode = 2
